@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/gentoo-bootstrap
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  17 Jan 2015; Johann Schmitz <ercpe@gentoo.org> gentoo-bootstrap-0.2.ebuild,
+  gentoo-bootstrap-0.3.ebuild:
+  Updated homepage
 
   28 Mar 2014; Johann Schmitz <ercpe@gentoo.org> gentoo-bootstrap-0.2.ebuild,
   gentoo-bootstrap-0.3.ebuild:
